chore: 数据格式化统一处理