@@ -1,22 +1,18 @@
 package io.metersphere.model;
 
-import com.alibaba.fastjson.JSONObject;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.psi.*;
 import com.intellij.psi.util.PsiTreeUtil;
 import de.plushnikov.intellij.lombok.util.PsiAnnotationUtil;
-import lombok.Data;
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.collections.MapUtils;
-import org.apache.commons.lang3.StringUtils;
 import io.metersphere.AppSettingService;
 import io.metersphere.constants.JavaTypeEnum;
 import io.metersphere.constants.WebAnnotation;
 import io.metersphere.state.AppSettingState;
-import io.metersphere.util.FieldUtils;
-import io.metersphere.util.JSONUtils;
-import io.metersphere.util.LogUtils;
-import io.metersphere.util.ProgressUtils;
+import io.metersphere.util.*;
+import lombok.Data;
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections.MapUtils;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.*;
 
@@ -70,144 +66,152 @@ public class RequestWrapper {
 
         PostmanModel.ItemBean itemBean = new PostmanModel.ItemBean();
         itemBean.setName(FieldUtils.getJavaDocName(thisMethod, appSettingState, true));
+
         PostmanModel.ItemBean.RequestBean requestBean = new PostmanModel.ItemBean.RequestBean();
         itemBean.setRequest(requestBean);
+
         Optional<PsiAnnotation> mappingOp = FieldUtils.findMappingAnn(thisMethod);
         if (mappingOp.isEmpty()) {
             return null;
         }
+
         requestBean.setMethod(FieldUtils.getMethod(mappingOp.get()));
-        PsiModifierList controllerModi = PsiTreeUtil.findChildOfType(controllerClass, PsiModifierList.class);
-        List<PsiAnnotation> annotations = PsiTreeUtil.findChildrenOfType(controllerModi, PsiAnnotation.class).stream().filter(a -> Objects.requireNonNull(a.getQualifiedName()).contains("RequestMapping")).toList();
-        PsiAnnotation requestMappingA = !annotations.isEmpty() ? annotations.getFirst() : null;
+
+        PsiModifierList controllerMod = PsiTreeUtil.findChildOfType(controllerClass, PsiModifierList.class);
+        List<PsiAnnotation> annotations = PsiTreeUtil.findChildrenOfType(controllerMod, PsiAnnotation.class)
+                .stream()
+                .filter(a -> Objects.requireNonNull(a.getQualifiedName()).contains("RequestMapping"))
+                .toList();
+        PsiAnnotation requestMappingA = !annotations.isEmpty() ? annotations.get(0) : null;
+
         if (requestMappingA != null) {
             basePath = PsiAnnotationUtil.getAnnotationValue(requestMappingA, String.class);
             if (StringUtils.isNotBlank(basePath)) {
-                if (basePath.startsWith("/"))
-                    basePath = basePath.replaceFirst("/", "");
-            } else {
-                basePath = "";
+                basePath = basePath.startsWith("/") ? basePath.substring(1) : basePath;
             }
         }
+
         if (StringUtils.isNotBlank(appSettingState.getContextPath())) {
-            if (StringUtils.isNotBlank(basePath))
-                basePath = appSettingState.getContextPath().replaceFirst("/", "") + "/" + basePath;
-            else
-                basePath = appSettingState.getContextPath().replaceFirst("/", "");
+            basePath = (StringUtils.isNotBlank(basePath) ? appSettingState.getContextPath().replaceFirst("/", "") + "/" + basePath :
+                    appSettingState.getContextPath().replaceFirst("/", ""));
         }
 
         Map<String, String> paramJavaDoc = FieldUtils.getParamMap(thisMethod, appSettingState);
-        //url
-        PostmanModel.ItemBean.RequestBean.UrlBean urlBean = new PostmanModel.ItemBean.RequestBean.UrlBean();
 
+        // URL
+        PostmanModel.ItemBean.RequestBean.UrlBean urlBean = new PostmanModel.ItemBean.RequestBean.UrlBean();
         urlBean.setHost("{{" + thisMethod.getProject().getName() + "}}");
         String urlStr = Optional.ofNullable(FieldUtils.getUrlFromAnnotation(thisMethod)).orElse("");
         urlBean.setPath(FieldUtils.getPath(urlStr, basePath));
         urlBean.setQuery(FieldUtils.getQuery(thisMethod, requestBean, paramJavaDoc));
         urlBean.setVariable(FieldUtils.getVariable(urlBean.getPath(), paramJavaDoc));
 
-        String rawPre = (StringUtils.isNotBlank(basePath) ? "/" + basePath : "");
+        String rawPre = StringUtils.isNotBlank(basePath) ? "/" + basePath : "";
+        String projectName = "{{" + thisMethod.getProject().getName() + "}}";
+        String cp = StringUtils.isNotBlank(appSettingState.getContextPath()) ?
+                projectName + "/" + appSettingState.getContextPath() : projectName;
+
+        String url = urlStr.startsWith("/") ? urlStr : "/" + urlStr;
         if (appSettingState.isWithBasePath()) {
-            String cp = StringUtils.isNotBlank(appSettingState.getContextPath()) ? "{{" + thisMethod.getProject().getName() + "}}" + "/" + appSettingState.getContextPath() : "{{" + thisMethod.getProject().getName() + "}}";
-            urlBean.setRaw(cp + rawPre + (urlStr.startsWith("/") ? urlStr : "/" + urlStr));
+            urlBean.setRaw(cp + rawPre + url);
         } else {
-            urlBean.setRaw(rawPre + (urlStr.startsWith("/") ? urlStr : "/" + urlStr));
+            urlBean.setRaw(rawPre + url);
         }
+
         requestBean.setUrl(urlBean);
-        ProgressUtils.show((String.format("Found controller: %s api: %s", controllerClass.getName(), urlBean.getRaw())));
-        //header
+        ProgressUtils.show(String.format("Found controller: %s api: %s", controllerClass.getName(), urlBean.getRaw()));
+
+        // Headers
         List<PostmanModel.ItemBean.RequestBean.HeaderBean> headerBeans = new ArrayList<>();
         if (isRestController) {
             FieldUtils.addRestHeader(headerBeans);
         } else {
             FieldUtils.addFormHeader(headerBeans);
         }
+
         PsiElement headAn = FieldUtils.findModifierInList(thisMethod.getModifierList(), "headers");
-        PostmanModel.ItemBean.RequestBean.HeaderBean headerBean = new PostmanModel.ItemBean.RequestBean.HeaderBean();
         if (headAn != null) {
             String headerStr = PsiAnnotationUtil.getAnnotationValue((PsiAnnotation) headAn, "headers", String.class);
             if (StringUtils.isNotBlank(headerStr)) {
-                headerBean.setKey(headerStr.split("=")[0]);
-                headerBean.setValue(headerStr.split("=")[1]);
-                headerBean.setType("text");
-                headerBeans.add(headerBean);
+                String[] headerParts = headerStr.split("=");
+                if (headerParts.length == 2) {
+                    PostmanModel.ItemBean.RequestBean.HeaderBean headerBean = new PostmanModel.ItemBean.RequestBean.HeaderBean();
+                    headerBean.setKey(headerParts[0]);
+                    headerBean.setValue(headerParts[1]);
+                    headerBean.setType("text");
+                    headerBeans.add(headerBean);
+                }
             } else {
-                Collection<PsiNameValuePair> heaerNVP = PsiTreeUtil.findChildrenOfType(headAn, PsiNameValuePair.class);
-                Iterator<PsiNameValuePair> psiNameValuePairIterator = heaerNVP.iterator();
-                while (psiNameValuePairIterator.hasNext()) {
-                    PsiNameValuePair ep1 = psiNameValuePairIterator.next();
-                    if (ep1.getText().contains("headers")) {
-                        Collection<PsiLiteralExpression> pleC = PsiTreeUtil.findChildrenOfType(headAn, PsiLiteralExpression.class);
-                        Iterator<PsiLiteralExpression> expressionIterator = pleC.iterator();
-                        while (expressionIterator.hasNext()) {
-
-                            PsiLiteralExpression ple = expressionIterator.next();
-                            String heaerItem = ple.getValue().toString();
-                            if (heaerItem.contains("=")) {
-                                headerBean = new PostmanModel.ItemBean.RequestBean.HeaderBean();
-                                headerBean.setKey(heaerItem.split("=")[0]);
-                                headerBean.setValue(heaerItem.split("=")[1]);
+                Collection<PsiNameValuePair> nameValuePairs = PsiTreeUtil.findChildrenOfType(headAn, PsiNameValuePair.class);
+                for (PsiNameValuePair pair : nameValuePairs) {
+                    Collection<PsiLiteralExpression> literalExpressions = PsiTreeUtil.findChildrenOfType(pair, PsiLiteralExpression.class);
+                    for (PsiLiteralExpression expression : literalExpressions) {
+                        String value = Objects.requireNonNull(expression.getValue()).toString();
+                        if (value.contains("=")) {
+                            String[] headerParts = value.split("=");
+                            if (headerParts.length == 2) {
+                                PostmanModel.ItemBean.RequestBean.HeaderBean headerBean = new PostmanModel.ItemBean.RequestBean.HeaderBean();
+                                headerBean.setKey(headerParts[0]);
+                                headerBean.setValue(headerParts[1]);
                                 headerBean.setType("text");
                                 headerBeans.add(headerBean);
                             }
                         }
                     }
                 }
-
             }
         }
+
         requestBean.setHeader(FieldUtils.removeDuplicate(headerBeans));
 
+        // Body
         PostmanModel.ItemBean.RequestBean.BodyBean bodyBean = new PostmanModel.ItemBean.RequestBean.BodyBean();
 
-        // body 和 form 表单
         if (this.paramStr.contains(WebAnnotation.RequestBody)) {
             bodyBean.setMode("raw");
             Optional<FieldWrapper> bodyFieldOp = getRequestBodyParam(this.getRequestFieldList());
-            if (bodyFieldOp.isPresent()) {
-                bodyBean.setRaw(JSONUtils.buildJson5(bodyFieldOp.get(), 0));
+            String finalBasePath = basePath;
+            bodyFieldOp.ifPresent(fieldWrapper -> {
+                bodyBean.setRaw(DataParseUtils.buildJson5(fieldWrapper, 0));
                 if (appSettingState.isWithJsonSchema()) {
-                    JSONObject jsonSchema = new JSONObject();
-                    JavaTypeEnum schemaType = bodyFieldOp.get().getType();
+                    Map<String, Object> jsonSchema = new HashMap<>();
+                    JavaTypeEnum schemaType = fieldWrapper.getType();
                     jsonSchema.put("type", schemaType == JavaTypeEnum.ARRAY ? "array" : "object");
                     jsonSchema.put("$id", "http://example.com/root.json");
                     jsonSchema.put("title", "The Root Schema");
                     jsonSchema.put("hidden", true);
                     jsonSchema.put("$schema", "http://json-schema.org/draft-07/schema#");
-                    JSONObject properties = new JSONObject();
-                    String bPath = "#/properties";
-                    String baseItemsPath = "#/items";
+
                     if (schemaType == JavaTypeEnum.ARRAY) {
-                        jsonSchema.put("items", JSONUtils.buildJsonSchemaItems(bodyFieldOp.get(), baseItemsPath, 0));
+                        jsonSchema.put("items", DataParseUtils.buildJsonSchemaItems(fieldWrapper, "#/items", 0));
                     } else {
-                        if (CollectionUtils.isNotEmpty(bodyFieldOp.get().getChildren())) {
-                            for (FieldWrapper child : bodyFieldOp.get().getChildren()) {
-                                properties.put(child.getName(), JSONUtils.buildJsonSchemaProperties(child, bPath, 0));
+                        if (CollectionUtils.isNotEmpty(fieldWrapper.getChildren())) {
+                            Map<String, Object> properties = new HashMap<>();
+                            for (FieldWrapper child : fieldWrapper.getChildren()) {
+                                properties.put(child.getName(), DataParseUtils.buildJsonSchemaProperties(child, "#/properties", 0));
                             }
+                            jsonSchema.put("properties", properties);
                         } else {
                             if (this.response.getPsiType() != null && !StringUtils.equalsIgnoreCase(this.response.getPsiType().getPresentableText(), "void")) {
-                                properties.put(this.response.getName(), JSONUtils.buildJsonSchemaProperties(this.response, basePath, 0));
+                                jsonSchema.put("properties", Collections.singletonMap(this.response.getName(), DataParseUtils.buildJsonSchemaProperties(this.response, finalBasePath, 0)));
                             }
                         }
                     }
-                    if (MapUtils.isNotEmpty(properties)) {
-                        jsonSchema.put("properties", properties);
-                    }
-                    bodyBean.setJsonSchema(jsonSchema.toJSONString());
+
+                    bodyBean.setJsonSchema(JSON.toJSONString(jsonSchema));
                 }
-            }
+            });
         } else {
-            bodyBean.setMode("formdata");
+            bodyBean.setMode("dataBean");
             Optional<FieldWrapper> formFieldOp = getFormParam(this.getRequestFieldList());
-            if (formFieldOp.isPresent()) {
-                bodyBean.setFormdata(JSONUtils.buildFormat(formFieldOp.get(), 0));
-            }
+            formFieldOp.ifPresent(fieldWrapper -> bodyBean.setDataBean(DataParseUtils.buildFormat(fieldWrapper, 0)));
         }
 
         requestBean.setBody(bodyBean);
         itemBean.setResponse(getResponseBean(itemBean));
         return itemBean;
     }
+
 
     private Optional<FieldWrapper> getRequestBodyParam(List<FieldWrapper> requestFieldList) {
         return requestFieldList
@@ -219,16 +223,13 @@ public class RequestWrapper {
     private Optional<FieldWrapper> getFormParam(List<FieldWrapper> requestFieldList) {
         return requestFieldList
                 .stream()
-                .filter(f -> containsForm(f))
+                .filter(this::containsForm)
                 .findFirst();
     }
 
     /**
      * form 表单 包含 RequestPart 或者
      * 既不包含 RequestPart 也不包含 RequestBody 不包含 PathVariable 也不包含 RequestParam
-     *
-     * @param f
-     * @return
      */
     private boolean containsForm(FieldWrapper f) {
         return FieldUtils.findAnnotationByName(f.getAnnotations(), WebAnnotation.RequestPart) != null ||
@@ -246,37 +247,37 @@ public class RequestWrapper {
         responseBean.setCode(200);
         responseBean.setHeader(getResponseHeader(itemBean));
         responseBean.set_postman_previewlanguage("json");
-        responseBean.setOriginalRequest(JSONObject.parseObject(JSONObject.toJSONString(itemBean.getRequest()), PostmanModel.ItemBean.ResponseBean.OriginalRequestBean.class));
+        responseBean.setOriginalRequest(JSON.parseObject(JSON.toJSONString(itemBean.getRequest()), PostmanModel.ItemBean.ResponseBean.OriginalRequestBean.class));
 
-        responseBean.setBody(JSONUtils.buildJson5(this.response, 0));
+        responseBean.setBody(DataParseUtils.buildJson5(this.response, 0));
         if (this.appSettingState.isWithJsonSchema()) {
-            JSONObject jsonSchema = new JSONObject();
+            Map<String, Object> jsonSchema = new HashMap<>();
             JavaTypeEnum schemaType = this.response.getType();
             jsonSchema.put("type", schemaType == JavaTypeEnum.ARRAY ? "array" : "object");
             jsonSchema.put("$id", "http://example.com/root.json");
             jsonSchema.put("title", "The Root Schema");
             jsonSchema.put("hidden", true);
             jsonSchema.put("$schema", "http://json-schema.org/draft-07/schema#");
-            JSONObject properties = new JSONObject();
+            Map<String, Object> properties = new HashMap<>();
             String basePath = "#/properties";
             String baseItemsPath = "#/items";
             if (schemaType == JavaTypeEnum.ARRAY) {
-                jsonSchema.put("items", JSONUtils.buildJsonSchemaItems(this.response, baseItemsPath, 0));
+                jsonSchema.put("items", DataParseUtils.buildJsonSchemaItems(this.response, baseItemsPath, 0));
             } else {
                 if (CollectionUtils.isNotEmpty(this.response.getChildren())) {
                     for (FieldWrapper child : this.response.getChildren()) {
-                        properties.put(child.getName(), JSONUtils.buildJsonSchemaProperties(child, basePath, 0));
+                        properties.put(child.getName(), DataParseUtils.buildJsonSchemaProperties(child, basePath, 0));
                     }
                 } else {
                     if (this.response.getPsiType() != null && !StringUtils.equalsIgnoreCase(this.response.getPsiType().getPresentableText(), "void")) {
-                        properties.put(this.response.getName(), JSONUtils.buildJsonSchemaProperties(this.response, basePath, 0));
+                        properties.put(this.response.getName(), DataParseUtils.buildJsonSchemaProperties(this.response, basePath, 0));
                     }
                 }
             }
             if (MapUtils.isNotEmpty(properties)) {
                 jsonSchema.put("properties", properties);
             }
-            responseBean.setJsonSchema(jsonSchema.toJSONString());
+            responseBean.setJsonSchema(JSON.toJSONString(jsonSchema));
         }
         return new ArrayList<>() {{
             add(responseBean);
@@ -290,35 +291,30 @@ public class RequestWrapper {
 
     private List<PostmanModel.ItemBean.ResponseBean.HeaderBeanXX> getResponseHeader(PostmanModel.ItemBean itemBean) {
         List<PostmanModel.ItemBean.ResponseBean.HeaderBeanXX> headers = new ArrayList<>();
-        PostmanModel.ItemBean.ResponseBean.HeaderBeanXX h1 = new PostmanModel.ItemBean.ResponseBean.HeaderBeanXX();
-        h1.setKey("date");
-        h1.setName("date");
-        h1.setValue("Thu, 02 Dec 2021 06:26:59 GMT");
-        h1.setDescription("The date and time that the message was sent");
-        headers.add(h1);
 
-        PostmanModel.ItemBean.ResponseBean.HeaderBeanXX h2 = new PostmanModel.ItemBean.ResponseBean.HeaderBeanXX();
-        h2.setKey("server");
-        h2.setName("server");
-        h2.setValue("Apache-Coyote/1.1");
-        h2.setDescription("A name for the server");
-        headers.add(h2);
+        // Common headers
+        headers.add(createHeader("date", "Thu, 02 Dec 2021 06:26:59 GMT", "The date and time that the message was sent"));
+        headers.add(createHeader("server", "Apache-Coyote/1.1", "A name for the server"));
+        headers.add(createHeader("transfer-encoding", "chunked", "The form of encoding used to safely transfer the entity to the user. Currently defined methods are: chunked, compress, deflate, gzip, identity."));
 
-        PostmanModel.ItemBean.ResponseBean.HeaderBeanXX h3 = new PostmanModel.ItemBean.ResponseBean.HeaderBeanXX();
-        h3.setKey("transfer-encoding");
-        h3.setName("transfer-encoding");
-        h3.setValue("chunked");
-        h3.setDescription("The form of encoding used to safely transfer the entity to the user. Currently defined methods are: chunked, compress, deflate, gzip, identity.");
-        headers.add(h3);
+        // Content-Type header if present in request headers
+        if (itemBean.getRequest().getHeader() != null) {
+            itemBean.getRequest().getHeader().stream()
+                    .filter(s -> s.getKey().equalsIgnoreCase("Content-Type"))
+                    .findFirst()
+                    .map(PostmanModel.ItemBean.RequestBean.HeaderBean::getValue).ifPresent(contentTypeValue -> headers.add(createHeader("content-type", contentTypeValue, "")));
 
-
-        if (itemBean.getRequest().getHeader() != null && itemBean.getRequest().getHeader().stream().filter(s -> s.getKey().equalsIgnoreCase("Content-Type")).count() > 0) {
-            PostmanModel.ItemBean.ResponseBean.HeaderBeanXX h4 = new PostmanModel.ItemBean.ResponseBean.HeaderBeanXX();
-            h4.setKey("content-type");
-            h4.setName("content-type");
-            h4.setValue(itemBean.getRequest().getHeader().stream().filter(s -> s.getKey().equalsIgnoreCase("Content-Type")).findFirst().orElse(new PostmanModel.ItemBean.RequestBean.HeaderBean()).getValue());
-            headers.add(h4);
         }
+
         return headers;
+    }
+
+    private PostmanModel.ItemBean.ResponseBean.HeaderBeanXX createHeader(String key, String value, String description) {
+        PostmanModel.ItemBean.ResponseBean.HeaderBeanXX header = new PostmanModel.ItemBean.ResponseBean.HeaderBeanXX();
+        header.setKey(key);
+        header.setName(key); // Assuming name is same as key
+        header.setValue(value);
+        header.setDescription(description);
+        return header;
     }
 }
